force-app/main/default/objects/Agenda__c/Agenda__c.object-meta.xml
<CustomObject>
    <label>Agenda</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Nombre de la Agenda</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agendas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>