force-app/main/default/objects/Agenda__c/fields/Centro__c.field-meta.xml
<CustomField>
    <fullName>Centro__c</fullName>
    <label>Centro</label>
    <referenceTo>Centro__c</referenceTo>
    <relationshipLabel>Agendas</relationshipLabel>
    <relationshipName>Agendas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>