force-app/main/default/objects/Agenda__c/fields/Especialidad__c.field-meta.xml
<CustomField>
    <fullName>Especialidad__c</fullName>
    <label>Especialidad</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Especialidad__c.Centro__c</field>
            <operation>equals</operation>
            <valueField>$Source.Centro__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Especialidad__c</referenceTo>
    <relationshipLabel>Agendas</relationshipLabel>
    <relationshipName>Agendas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>