force-app/main/default/objects/Agenda__c/fields/Fecha_Final__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Final__c</fullName>
    <label>Fecha Final</label>
    <required>true</required>
    <type>Date</type>
</CustomField>