force-app/main/default/objects/Agenda__c/fields/Fecha_Inicio__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio__c</fullName>
    <label>Fecha Inicio</label>
    <required>true</required>
    <type>Date</type>
</CustomField>