force-app/main/default/objects/Agenda__c/fields/Hora_Final_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Hora_Final_Agenda__c</fullName>
    <defaultValue>TIMEVALUE(&quot;18:00:00.000&quot;)</defaultValue>
    <label>Hora Final Agenda</label>
    <required>true</required>
    <type>Time</type>
</CustomField>