force-app/main/default/objects/Agenda__c/fields/Hora_Inicio_Agenda__c.field-meta.xml
<CustomField>
    <fullName>Hora_Inicio_Agenda__c</fullName>
    <defaultValue>TIMEVALUE(&quot;9:30:00.000&quot;)</defaultValue>
    <label>Hora Inicio Agenda</label>
    <required>true</required>
    <type>Time</type>
</CustomField>