force-app/main/default/objects/Agenda__c/validationRules/FechasIncorrectas.validationRule-meta.xml
<ValidationRule>
    <fullName>FechasIncorrectas</fullName>
    <active>true</active>
    <errorConditionFormula>Fecha_Inicio__c &gt;  Fecha_Final__c</errorConditionFormula>
    <errorMessage>La fecha de final de la agenda no puede ser posterior a la fecha de inicio</errorMessage>
</ValidationRule>