force-app/main/default/objects/Agenda__c/validationRules/HorasIncorrectas.validationRule-meta.xml
<ValidationRule>
    <fullName>HorasIncorrectas</fullName>
    <active>true</active>
    <errorConditionFormula>Hora_Inicio_Agenda__c &gt;=  Hora_Final_Agenda__c</errorConditionFormula>
    <errorMessage>La hora de inicio de la agenda no puede ser igual ni posterior a la hora de final.</errorMessage>
</ValidationRule>